[Bug 3982] Fix: Text overlaps canceled/confirmed icons in grid
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/seminars/trunk@35004 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Public/CSS/BackEndExtJs/BackEnd.css
+++ b/Resources/Public/CSS/BackEndExtJs/BackEnd.css
@@ -16,6 +16,11 @@
 .cancel {
 	background: url(../../Icons/Canceled.png) left center no-repeat !important;
 }
+td.planned div.x-grid3-cell-inner,
+td.cancel div.x-grid3-cell-inner,
+td.confirm div.x-grid3-cell-inner {
+	padding-left: 18px;
+}
 .new {
 	background: url(../../../../../../../typo3/sysext/t3skin/icons/gfx/new_record.gif) left center no-repeat !important;
 }
